--- a/style.css
+++ b/style.css
@@ -10,28 +10,18 @@ BODY {
 }
 
 /*banner name at top */
-#name {
+h1{
     font-size:3em;
     text-transform:uppercase;
     text-align:center;
     color:#33485e;
-    border-bottom:1px solid #33485e;
-    width:60%;
-    min-width:300px;
-    margin: 0 auto;
 }
 
 /*my title under name */
-#title {
+strong {
     color:#33485e;
     text-transform:uppercase;
     font-size:1.5em;
-    font-weight:600;
-    text-align:center;
-    margin-top:20px;
-    margin-bottom:0px;
-    margin-left:0px;
-    margin-right:0px;
 }
 
 /*mission statement */
@@ -44,17 +34,11 @@ BODY {
 }
 
 /*section headers */
-.sectionheader {
+h2 {
     font-size:1.5em;
     text-transform:uppercase;
-    color:#fff;
     background-color:#33485e;
-    margin-top:20px;
-    margin-bottom:10px;
-    margin-right:0px;
-    margin-left:0px;
-    width:70%;
-    min-width:300px;
+    color:#fff;
 }
 
 /*job titles */
@@ -114,3 +98,9 @@ ul {
     margin-left:0px;
     margin-right:0px;
 }
+
+
+
+
+
+
