--- a/style.css
+++ b/style.css
@@ -26,22 +26,23 @@ strong {
 
 /*section headers */
 h2 {
-    font-size:1.5em;
-    text-transform:uppercase;
-    background-color:#33485e;
-    color:#fff;
-}
+    font-size: 1.5em;
+    background-color: #33485e;
+    color: #fff;
+  }
 
+/*job titles */
 h3 {
     font-weight: 600;
     font-size:1.5em;
 }
 
+/*job organizations */
 h4 {
     font-size:1.5em;
-    text-align:center;
 }
 
+/*job dates */
 h5 {
     font-style:italic;
     font-size:1em;
