--- a/resume/style.css
+++ b/resume/style.css
@@ -26,12 +26,26 @@ strong {
 
 /*section headers */
 h2 {
+    font-size: 1.5em;
+    background-color: #33485e;
+    color: #fff;
+  }
+
+/*job titles */
+h3 {
+    font-weight: 600;
     font-size:1.5em;
-    text-transform:uppercase;
-    background-color:#33485e;
-    color:#fff;
 }
 
+/*job organizations */
+h4 {
+    font-size:1.5em;
+}
 
+/*job dates */
+h5 {
+    font-style:italic;
+    font-size:1em;
+}
 
 
