--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ BODY {
 }
 
 /*banner name at top */
-h1 {
+#name {
     font-size:3em;
     text-transform:uppercase;
     text-align:center;
-    color:#33485e;
+    border-bottom: 1px solid #33485e;
 }
 
 /*my title under name */
