--- a/midterm/style.css
+++ b/midterm/style.css
@@ -1,4 +1,111 @@
 #content {
+    display: block;
     margin: 0 auto;
-    width: 900px;
+    max-width: 900px;
+}
+
+#byline {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 14px;
+    line-height: .3;
+    text-align: center;
+    margin-bottom: 40px;
+    margin-left: 10px;
+    margin-top: 40px;
+}
+
+#site-name {
+    font-family: "Cormorant", serif;
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 40px;
+    font-style: italic;
+}
+
+.masthead-img {
+    width: 60%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#masthead {
+  position: sticky;
+  top: 0; /* position and top make it stay still when scrolling */
+  background-color: white;
+  padding-top: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#headline {
+    font-family: "Cormorant", serif;
+    font-size: 45px;
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 40px;
+    line-height: 1.2;
+}
+
+h2 {
+    font-size: 18px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 1px;
+    line-height: 140%;
+    text-align: center;
+    font-style: italic;
+    margin: 0 auto;
+    max-width: 900px;
+    color: rgb(2, 90, 11);
+}
+
+body {
+    font-size: 15px;
+    font-family: helvetica, arial, sans-serif;
+    line-height: 140%;
+}
+
+.top-image {
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.image {
+    width: 70%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+
+.caption {
+    color: rgb(2, 90, 11);
+    text-align: center;
+    font-size: 12px;
+}
+
+blockquote {
+    font-family: 'Times New Roman', serif;
+    font-style: italic;
+    font-size: 27px;
+    color:rgb(115, 114, 114);
+    line-height: 1.5;
+    text-align: center;
+}
+
+#blockquote-caption {
+    text-align: center;
+    margin-bottom: 25px;
+    font-style: italic;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(84, 84, 84);
+    font-size: 12px;
+}
+
+#read-more {
+    font-size: 14px;
+    font-style: italic;
+    color: rgb(82, 82, 82);
+    margin-left: 10px;
+    margin-top: 10px;
 }
