--- a/data-viz-project/style.css
+++ b/data-viz-project/style.css
@@ -1,5 +1,5 @@
 #site-name {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: "Cormorant", serif;
     font-size: 28px;
     margin-top: 6px;
     margin-bottom: 0px;
@@ -28,7 +28,6 @@ hr {
 
 
 
-
 .topper img {
     max-width: none;
     width: 100%;
@@ -40,7 +39,7 @@ hr {
 .byline {
     font-size: 1em;
     text-transform: uppercase;
-    font-family: 'Montserrat', sans-serif;
+    font-family: georgia, serif;
     text-align: center;
 }
 
@@ -57,25 +56,26 @@ hr {
     max-width: none;
     width: 30%;
     display: block;
-    float: right;
-    margin-left: 15px;
-    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    float: none;
 }
 
 
 p {
     font-family: georgia, serif;
     line-height: 180%;
+    text-align: justify;
 }
 
 
-.in-text-photo {
-    width: 100%;
-    height: auto;
-    max-width: 600px;
+.yntcdreal1 {
+    max-width: none;
+    width: 20%;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    float: left;
+    margin-left: -13px;
+    margin-bottom: -5px; 
 }
 
 
@@ -121,8 +121,35 @@ p {
     text-align: center;
 }
 
+
+blockquote {
+    font-size: 15px;
+    color: #bb5a0b;
+    font-family: "Cormorant", serif;
+}
+
+
+.pull-quote {
+    float: left;             
+    width: 35%;              
+    font-size: 23px;
+    line-height: 1.3;
+    margin: 30px 20px 30px 0; 
+    padding: 10px;
+    border-left: 4px solid #d64c4c;
+    font-family: "Cormorant", serif;
+}
+
+
+.tiktok-wrapper {
+    float: right;
+    width: 300px;
+    margin: 0 0 0px 24px;
+}
+
+
 footer {
-    background-color: #EB7618;
+    background-color: #ac5005;
     margin-top: 30px;
     height: 60px;
     color: white;
