tiktok embed issues
Trying to make tiktok embed format better on mobile

--- a/data-viz-project/style.css
+++ b/data-viz-project/style.css
@@ -144,9 +144,9 @@ blockquote {
 
 .tiktok-wrapper {
     float: right;
-    width: 300px;
-    margin: 0 0 0px 24px;
+    margin: 0 10px 0px 24px;
 }
+
 
 
 footer {
